# dfhack-ci

./: README.md  setup.cfg  setup.py
.github/workflows/: test.yml
dfhack/ci/scripts/: clone.py
dfhack/ci/util/: git.py  github.py  github_parse.py
test/: test_git_util.py  test_github_util.py  test_pull_request_ref.py
