[metadata]
name = dfhack-ci
version = 0.1
description = DFHack shared CI utilities
classifiers =
    Framework :: Django
    License :: OSI Approved :: zlib/libpng License
    Programming Language :: Python :: 3

[options.entry_points]
console_scripts =
    dfhack-clone = dfhack.ci.scripts.clone:main
